[package]
name = "neptunium-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15.22", features = ["json"] }
fluxer-neptunium = "0.3.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[features]
default = []
docker = []