[package]
name = "neptunium-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15.22", features = ["json"] }
evalexpr = "13.1.0"
fluxer-neptunium = { git = "https://github.com/PilkeySEK/fluxer-neptunium.git", features = [
    "experimental-macros",
] }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[features]
default = []
docker = []
